--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,6 +40,9 @@ a:hover {
     padding: .5em 0 .5em .5em;
 }
 
+
+
+
 /*
 
 Customs
@@ -56,22 +59,43 @@ body {
     text-align: center;
     font-size: 16px;
     font-family: 'Oxygen', Arial, Helvetica;
+    background: #262626;
     
     margin: 0;
     padding: 0;
-    position: relative;
     overflow-x: hidden;
 }
 
+
+
+
+/*
+
+Hero
+
+*/
+
 canvas {
     background: #262626;
+    
+    width: 100%;
+    height: 100%;
 }
 
 .hero {
+    position: relative;
+    
+    cursor: none;
+}
+
+.hero-text {
     position: absolute;
     left: 0;
     right: 0;
-    top: 25%;
+    top: 50%;
+    
+    line-height: 655px;
+    transform: translateY(-50%);
     
     color: #f3f3f3;
     text-shadow: 1px 1px 10px #343434,
@@ -79,6 +103,7 @@ canvas {
 }
 
 .hero h1 {
+    line-height: 1;
     font-size: 64px;
     
     margin: 0 auto;
@@ -86,17 +111,22 @@ canvas {
 }
 
 hr {
+    line-height: 1;
     width: 50%;
     margin: 2.5% auto;
     padding: 0;
 }
 
-.hero p {
+.hero-text p {
+    line-height: 1;
     margin: 0 auto;
     padding: 0;
     
     font-size: 28px;
 }
+
+
+
 
 /*
 
@@ -104,27 +134,74 @@ Navigation
 
 */
 
+nav {
+    background-color: transparent;
+    cursor: none;
+    
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
 ul {
-    height: 50px;
+    height: 75px;
     
     display: flex;
     justify-content: flex-end;
-    align-items: center;
 }
 
 ul li {
     display: inline-block;
-    margin-left: 2.5%;
+    margin-left: 7%;
     
-    font-size: 16px;
+    font-size: 18px;
 }
 ul li:last-child {
-    margin-right: 1%;
+    margin-right: 2.5%;
 }
 ul li:first-child {
     margin-left: 0;
 }
 
+ul li a {
+    color: #f3f3f3;
+    text-shadow: 1px 1px 10px #343434,
+        -1px -1px 10px #343434;
+}
+ul li {
+    border-bottom-color: #f3f3f3;
+    height: 75px;
+    
+    display: flex;
+    align-items: center;
+    
+    transition: all .5s;
+}
+ul li:hover {
+    border-bottom: 3px solid #f3f3f3;
+}
 ul li a:hover {
     text-decoration: none;
+    
+    cursor: pointer;
+}
+
+/*
+
+test
+
+*/
+
+.test {
+    height: 900px;
+    width: 100%;
+    background: #f3f3f3;
+}
+
+.fixed-top {
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100%;
 }
