--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -176,10 +176,12 @@ ul li {
     display: flex;
     align-items: center;
     
-    transition: all .5s;
+    transition: border-bottom .5s;
 }
 ul li:hover {
     border-bottom: 3px solid #f3f3f3;
+    
+    cursor: pointer;
 }
 ul li a:hover {
     text-decoration: none;
